fix spacing

--- a/css/ar-style.css
+++ b/css/ar-style.css
@@ -541,7 +541,7 @@ figure.effect-bubba:hover p {
 
 	.tm-welcome-box { 
 		max-width: 400px;
-		width: 50%;
+		width: 49%;
 	}
 
 	.tm-section-title { margin-bottom: 30px; }
